--- a/npcs/khamal_headrender_algolunaka.yaml
+++ b/npcs/khamal_headrender_algolunaka.yaml
@@ -134,7 +134,7 @@ npc:
   # Required.
   # Max length: ...
   #
-  name: Khamal /"Headrender/" Algolunaka
+  name: Khamal 'Headrender' Algolunaka
 
   #
   # The NPC artwork.
