--- a/npcs/tony_the_carp_sarducci.yaml
+++ b/npcs/tony_the_carp_sarducci.yaml
@@ -134,7 +134,7 @@ npc:
   # Required.
   # Max length: ...
   #
-  name: Tony "The Carp" Sarducci
+  name: Tony 'The Carp' Sarducci
 
   #
   # The NPC artwork.
