--- a/npcs/albrecht_mukht.yaml
+++ b/npcs/albrecht_mukht.yaml
@@ -471,7 +471,7 @@ npc:
       - Persuasion
       - Mason's Tools
       - Woodcrafter's Tools
-      special-abilities:
+    - special-abilities:
       - Half-Orc Abilities:
         - Darkvision: Can see in dim light within 60 feet as if it were bright light, and in Darkness as if it were dim light. Can’t discern color in Darkness, only Shades of Gray..           
           Menacing: gain proficiency in the Intimidation skill 
