--- a/npcs/albrecht_mukht.yaml
+++ b/npcs/albrecht_mukht.yaml
@@ -464,18 +464,18 @@ npc:
   # ???Max length???
   #
   specialties:
-    saving Throws:
+    saving-throws:
     - Constitution
     - Strength
-    damage immunities:
+    damage-immunities:
     - N/A
-    condition immunities:
+    condition-immunities:
     - N/A
     resistances:
     - N/A
     skills:
     - Masonry
-    Proficiencies: 
+    proficiencies: 
     - Intimidation
     - Persuasion
     - Mason's Tools
