--- a/npcs/Anastasia_Dumas.yaml
+++ b/npcs/Anastasia_Dumas.yaml
@@ -481,8 +481,8 @@ npc:
       - Decription: You gain two of the following Metamagic Options of your choice. You gain another one at 10th and 17th level.
         Empowered Spell: When you roll damage for a spell, you can spend 1 sorcery point to reroll a number of the damage dice up to your Charisma modifier (minimum of one). You must use the new rolls. You can use Empowered 
                          Spell even if you have already used a different Metamagic option during the casting of the spell.
-        Heightened Speell: When you Cast a Spell that forces a creature to make a saving throw to resist its Effects, you can spend 3 sorcery points to give one target of the spell disadvantage on its first saving throw made 
-                           against the spell.
+        Heightened Spell: When you Cast a Spell that forces a creature to make a saving throw to resist its Effects, you can spend 3 sorcery points to give one target of the spell disadvantage on its first saving throw made 
+                          against the spell.
         Subtle Spell: When you Cast a Spell, you can spend 1 sorcery point to cast it without any somatic or verbal Components
         eTwinned Spell: When you Cast a Spell that Targets only one creature and doesn’t have a range of self, you can spend a number of sorcery points equal to the spell’s level to target a second creature in range with the 
                         same spell (1 sorcery point if the spell is a cantrip)
